<resources>
    <string name="app_name">Camping Lights</string>
    <string name="light_flicker">Flash</string>
    <string name="waring">WARNING: Do not shine into eyes when camping lights is on!</string>
    <string name="sos">SOS</string>
    <string name="strobe">Super</string>
    <string name="constant">Constant</string>
    <string name="full">Full</string>
    <string name="half">Half</string>
    <string name="quarter">Quarter</string>
    <string name="resume_info">Do not shine into eyes when camping light is on</string>
    <string name="sure">SURE</string>
    <string name="cancel">CANCEL</string>
    <string name="help">Help</string>
    <string name="tips">Low battery reminder</string>
    <string name="batteryInfo">The remaining battery level is less than 15%, and the camping light cannot be used!</string>
    <string name="help_info">1.Set the on-light duration in the upper left of the screen\n2.To turn on or off camping lights, you need to click on the corresponding icon</string>
    <string name="time">No fixed time</string>
    <string name="time_5">5 Minutes</string>
    <string name="time_10">10 Minutes</string>
    <string name="time_15">15 Minutes</string>
    <string name="time_30">30 Minutes</string>
    <string name="time_60">60 Minutes</string>
    <string name="more_15">The camping lights have been fully on and running for more than 15 minutes in a short period of time. To avoid excessive equipment temperature, the camping lights have been turned off</string>
    <string name="more_15_tips">Tip</string>
    <string name="more_15_tips_open_again">It has been running for 15 minutes with full brightness in a short period of time. Please pay attention to the device temperature</string>
</resources>