<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:padding="16dp"    android:orientation="vertical">    <TextView        android:id="@+id/textTitle"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:text="@string/app_name"        android:textSize="20sp"        android:textStyle="bold"        android:paddingBottom="10dp"/>    <RadioGroup        android:id="@+id/camping_lamp_time_settings_menu"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/camping_lamp_menu_item_bg"        android:checkedButton="@+id/follow_sys_id"        android:orientation="vertical">        <RadioButton            android:id="@+id/minute_0_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time"            android:textDirection="ltr"            android:checked="true"            android:textSize="18sp" />        <RadioButton            android:id="@+id/minute_5_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time_5"            android:textDirection="ltr"            android:textSize="18sp" />        <RadioButton            android:id="@+id/minute_10_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time_10"            android:textDirection="ltr"            android:textSize="18sp" />        <RadioButton            android:id="@+id/minute_15_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time_15"            android:textDirection="ltr"            android:textSize="18sp" />        <RadioButton            android:id="@+id/minute_30_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time_30"            android:textDirection="ltr"            android:textSize="18sp" />        <RadioButton            android:id="@+id/minute_60_id"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@android:color/transparent"            android:button="@null"            android:drawableRight="@android:drawable/btn_radio"            android:drawablePadding="8dp"            android:layoutDirection="rtl"            android:text="@string/time_60"            android:textDirection="ltr"            android:textSize="18sp" />    </RadioGroup></LinearLayout>